src/test/ui/half-open-range-patterns/half-open-range-pats-ref-ambiguous-interp.stderr
error: the range pattern here has ambiguous interpretation
  --> $DIR/half-open-range-pats-ref-ambiguous-interp.rs:8:10
   |
LL |         &0.. | _ => {}
   |          ^^^ help: add parentheses to clarify the precedence: `(0..)`

error[E0586]: inclusive range with no end
  --> $DIR/half-open-range-pats-ref-ambiguous-interp.rs:10:11
   |
LL |         &0..= | _ => {}
   |           ^^^ help: use `..` instead
   |
   = note: inclusive ranges must be bounded at the end (`..=b` or `a..=b`)

error: the range pattern here has ambiguous interpretation
  --> $DIR/half-open-range-pats-ref-ambiguous-interp.rs:10:10
   |
LL |         &0..= | _ => {}
   |          ^^^^ help: add parentheses to clarify the precedence: `(0..=)`

error[E0586]: inclusive range with no end
  --> $DIR/half-open-range-pats-ref-ambiguous-interp.rs:13:11
   |
LL |         &0... | _ => {}
   |           ^^^ help: use `..` instead
   |
   = note: inclusive ranges must be bounded at the end (`..=b` or `a..=b`)

error: the range pattern here has ambiguous interpretation
  --> $DIR/half-open-range-pats-ref-ambiguous-interp.rs:18:10
   |
LL |         &..0 | _ => {}
   |          ^^^ help: add parentheses to clarify the precedence: `(..0)`

error: the range pattern here has ambiguous interpretation
  --> $DIR/half-open-range-pats-ref-ambiguous-interp.rs:20:10
   |
LL |         &..=0 | _ => {}
   |          ^^^^ help: add parentheses to clarify the precedence: `(..=0)`

error: range-to patterns with `...` are not allowed
  --> $DIR/half-open-range-pats-ref-ambiguous-interp.rs:22:10
   |
LL |         &...0 | _ => {}
   |          ^^^ help: use `..=` instead

error: the range pattern here has ambiguous interpretation
  --> $DIR/half-open-range-pats-ref-ambiguous-interp.rs:22:10
   |
LL |         &...0 | _ => {}
   |          ^^^^ help: add parentheses to clarify the precedence: `(..=0)`

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0586`.
